@@ -3,6 +3,7 @@ package me.mrCookieSlime.Slimefun;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Iterator;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -42,6 +43,7 @@ import me.mrCookieSlime.Slimefun.Objects.SlimefunItem.SlimefunMachine;
 import me.mrCookieSlime.Slimefun.Objects.SlimefunItem.abstractItems.AGenerator;
 import me.mrCookieSlime.Slimefun.Objects.SlimefunItem.abstractItems.AReactor;
 import me.mrCookieSlime.Slimefun.Objects.SlimefunItem.abstractItems.MachineFuel;
+import me.mrCookieSlime.Slimefun.Objects.SlimefunItem.interfaces.RecipeDisplayItem;
 import me.mrCookieSlime.Slimefun.Setup.Messages;
 import me.mrCookieSlime.Slimefun.Setup.SlimefunManager;
 import me.mrCookieSlime.Slimefun.api.GuideHandler;
@@ -50,14 +52,14 @@ import me.mrCookieSlime.Slimefun.api.Slimefun;
 import me.mrCookieSlime.Slimefun.api.SlimefunGuideLayout;
 import me.mrCookieSlime.Slimefun.hooks.github.Contributor;
 import me.mrCookieSlime.Slimefun.hooks.github.IntegerFormat;
-import me.mrCookieSlime.Slimefun.utils.RecipeDisplayItem;
 
 public final class SlimefunGuide {
 	
 	private SlimefunGuide() {}
 	
 	private static final int category_size = 36;
-
+	private static final int[] slots = new int[] {0, 2, 3, 5, 6, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35};
+	
 	@Deprecated
 	public static ItemStack getItem() {
 		return getItem(SlimefunGuideLayout.CHEST);
@@ -85,8 +87,6 @@ public final class SlimefunGuide {
 	public static ItemStack getDeprecatedItem(boolean book) {
 		return new CustomItem(new ItemStack(Material.ENCHANTED_BOOK), "&eSlimefun Guide &7(Right Click)", (book ? "": "&2"), "&rThis is your basic Guide for Slimefun", "&rYou can see all Items added by this Plugin", "&ror its Addons including their Recipes", "&ra bit of information and more");
 	}
-	
-	private static final int[] slots = new int[] {0, 2, 3, 5, 6, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35};
 	
 	public static void openSettings(Player p, final ItemStack guide) {
 		final ChestMenu menu = new ChestMenu("Settings / Info");
@@ -184,16 +184,12 @@ public final class SlimefunGuide {
 		final ChestMenu menu = new ChestMenu("Credits");
 		
 		menu.setEmptySlotsClickable(false);
-		menu.addMenuOpeningHandler(
-			pl -> pl.playSound(pl.getLocation(), Sound.BLOCK_NOTE_BLOCK_HARP, 0.7F, 0.7F)
-		);
+		menu.addMenuOpeningHandler(pl -> pl.playSound(pl.getLocation(), Sound.BLOCK_NOTE_BLOCK_HARP, 0.7F, 0.7F));
 		
 		for (int i = 0; i < 9; i++) {
 			if (i != 4) {
 				menu.addItem(i, new CustomItem(new ItemStack(Material.GRAY_STAINED_GLASS_PANE), " "));
-				menu.addMenuClickHandler(i,
-					(pl, slot, item, action) -> false
-				);
+				menu.addMenuClickHandler(i, (pl, slot, item, action) -> false);
 			}
 			else {
 				menu.addItem(4, new CustomItem(new ItemStack(Material.EMERALD), "&7\u21E6 Back to Settings"));
@@ -205,11 +201,7 @@ public final class SlimefunGuide {
 		}
 		
 		int index = 9;
-		double total = 0;
-
-		for (Contributor contributor : SlimefunPlugin.getUtilities().contributors) {
-			total += contributor.getCommits();
-		}
+		double total = 1.0 * SlimefunPlugin.getUtilities().contributors.stream().mapToInt(Contributor::getCommits).sum();
 		
 		for (final Contributor contributor: SlimefunPlugin.getUtilities().contributors) {
 			ItemStack skull = new ItemStack(Material.PLAYER_HEAD);
@@ -259,7 +251,10 @@ public final class SlimefunGuide {
 	public static void openGuide(Player p, boolean book) {
 		if (!SlimefunPlugin.getWhitelist().getBoolean(p.getWorld().getName() + ".enabled")) return;
 		if (!SlimefunPlugin.getWhitelist().getBoolean(p.getWorld().getName() + ".enabled-items.SLIMEFUN_GUIDE")) return;
-		if (!getHistory().containsKey(p.getUniqueId())) openMainMenu(p, true, book, 1);
+		
+		if (!getHistory().containsKey(p.getUniqueId())) {
+			openMainMenu(p, true, book, 1);
+		}
 		else {
 			Object last = getLastEntry(p, false);
 			if (last instanceof Category) openCategory(p, (Category) last, true, 1, book);
@@ -270,8 +265,9 @@ public final class SlimefunGuide {
 	}
 
 	public static void openMainMenu(final Player p, final boolean survival, final boolean book, final int selected_page) {
-		if (survival)
+		if (survival) {
 			clearHistory(p.getUniqueId());
+		}
 		
 		if (book) {
 			List<TellRawMessage> pages = new ArrayList<>();
@@ -293,7 +289,7 @@ public final class SlimefunGuide {
 				}
 				
 				if (locked) {
-					// Dont display that Category...
+					// Don't display that Category...
 				}
 				else {
 					if (tier < category.getTier()) {
@@ -402,7 +398,7 @@ public final class SlimefunGuide {
 			menu.setEmptySlotsClickable(false);
 			menu.addMenuOpeningHandler(pl -> pl.playSound(pl.getLocation(), Sound.ITEM_BOOK_PAGE_TURN, 1, 0));
 			
-			List<Category> categories = SlimefunPlugin.getUtilities().currentlyEnabledCategories;
+			List<Category> categories = SlimefunPlugin.getUtilities().enabledCategories;
 			List<GuideHandler> handlers = SlimefunPlugin.getUtilities().guideHandlers.values().stream().flatMap(List::stream).collect(Collectors.toList());
 			
 			int index = 9;
@@ -410,16 +406,12 @@ public final class SlimefunGuide {
 			
 			for (int i = 0; i < 9; i++) {
 				menu.addItem(i, new CustomItem(new ItemStack(Material.GRAY_STAINED_GLASS_PANE), " "));
-				menu.addMenuClickHandler(i,
-					(pl, slot, item, action) -> false
-				);
+				menu.addMenuClickHandler(i, (pl, slot, item, action) -> false);
 			}
 			
 			for (int i = 45; i < 54; i++) {
 				menu.addItem(i, new CustomItem(new ItemStack(Material.GRAY_STAINED_GLASS_PANE), " "));
-				menu.addMenuClickHandler(i,
-					(pl, slot, item, action) -> false
-				);
+				menu.addMenuClickHandler(i, (pl, slot, item, action) -> false);
 			}
 			
 			int target = (category_size * (selected_page - 1)) - 1;
@@ -433,12 +425,13 @@ public final class SlimefunGuide {
 				target++;
 				
 				if (target >= categories.size()) {
-					if (!survival) break;
+					if (!survival) {
+						break;
+					}
 					index = handlers.get(target - categories.size()).next(p, index, menu);
 				}
 				else {
 					final Category category = categories.get(target);
-					
 					boolean locked = true;
 					
 					for (SlimefunItem item: category.getItems()) {
@@ -485,13 +478,13 @@ public final class SlimefunGuide {
 						parents.add(ChatColor.translateAlternateColorCodes('&', "&rYou need to unlock all Items"));
 						parents.add(ChatColor.translateAlternateColorCodes('&', "&rfrom the following Categories first:"));
 						parents.add("");
+						
 						for (Category parent : ((LockedCategory) category).getParents()) {
 							parents.add(parent.getItem().getItemMeta().getDisplayName());
 						}
+						
 						menu.addItem(index, new CustomItem(Material.BARRIER, "&4LOCKED &7- &r" + category.getItem().getItemMeta().getDisplayName(), parents.toArray(new String[parents.size()])));
-						menu.addMenuClickHandler(index,
-							(pl, slot, item, action) -> false
-						);
+						menu.addMenuClickHandler(index, (pl, slot, item, action) -> false);
 						index++;
 					}
 				}
@@ -609,19 +602,23 @@ public final class SlimefunGuide {
 			for (int i = 0; i < texts.size(); i = i + 10) {
 				TellRawMessage page = new TellRawMessage();
 				page.addText(ChatColor.translateAlternateColorCodes('&', "&b&l- Slimefun Guide -\n\n"));
+				
 				for (int j = i; j < texts.size() && j < i + 10; j++) {
 					page.addText(texts.get(j) + "\n");
 					if (tooltips.get(j) != null) page.addHoverEvent(HoverAction.SHOW_TEXT, tooltips.get(j));
 					if (actions.get(j) != null) page.addClickEvent(actions.get(j));
 				}
+				
 				page.addText("\n");
 				page.addText(ChatColor.translateAlternateColorCodes('&', "&6\u21E6 &lBack"));
 				page.addHoverEvent(HoverAction.SHOW_TEXT, ChatColor.translateAlternateColorCodes('&', "&eClick to go back to the Category Overview"));
 				page.addClickEvent(new PlayerRunnable(2) {
+					
 					@Override
 					public void run(final Player p) {
 						Bukkit.getScheduler().scheduleSyncDelayedTask(SlimefunPlugin.instance, () -> openMainMenu(p, survival, true, 1), 1L);
 					}
+					
 				});
 				pages.add(page);
 			}
@@ -678,10 +675,12 @@ public final class SlimefunGuide {
 				int target = categoryIndex + i;
 				if (target >= category.getItems().size()) break;
 				final SlimefunItem sfitem = category.getItems().get(target);
+				
 				if (Slimefun.isEnabled(p, sfitem, false)) {
 					if (survival && !Slimefun.hasUnlocked(p, sfitem.getItem(), false) && sfitem.getResearch() != null) {
 						if (Slimefun.hasPermission(p, sfitem, false)) {
 						    final Research research = sfitem.getResearch();
+						    
 							menu.addItem(index, new CustomItem(Material.BARRIER, "&r" + StringUtils.formatItemName(sfitem.getItem(), false), "&4&lLOCKED", "", "&a> Click to unlock", "", "&7Cost: &b" + research.getCost() + " Level"));
 							menu.addMenuClickHandler(index, (pl, slot, item, action) -> {
 								if (!Research.isResearching(pl)) {
@@ -714,10 +713,8 @@ public final class SlimefunGuide {
 							index++;
 						}
 						else {
-							List<String> list = Messages.local.getTranslation("tooltips.item-permission");
-							String[] strings = list.toArray(new String[list.size()]);
-							CustomItem display = new CustomItem(Material.BARRIER, StringUtils.formatItemName(sfitem.getItem(), false),  strings);
-						    menu.addItem(index, display);
+							List<String> tooltip = Messages.local.getTranslation("tooltips.item-permission");
+						    menu.addItem(index, new CustomItem(Material.BARRIER, StringUtils.formatItemName(sfitem.getItem(), false), tooltip.toArray(new String[tooltip.size()])));
 							menu.addMenuClickHandler(index, (pl, slot, item, action) -> false);
 							index++;
 						}
@@ -743,25 +740,28 @@ public final class SlimefunGuide {
 	}
 
 	public static void addToHistory(Player p, Object obj) {
-		List<Object> list = new ArrayList<>();
-		if (getHistory().containsKey(p.getUniqueId())) list = getHistory().get(p.getUniqueId());
+		LinkedList<Object> list = getHistory().get(p.getUniqueId());
+		
+		if (list == null) {
+			list = new LinkedList<>();
+			getHistory().put(p.getUniqueId(), list);
+		}
+		
 		list.add(obj);
-		getHistory().put(p.getUniqueId(), list);
 	}
 
 	private static Object getLastEntry(Player p, boolean remove) {
-		List<Object> list = new ArrayList<>();
-		if (getHistory().containsKey(p.getUniqueId())) list = getHistory().get(p.getUniqueId());
+		LinkedList<Object> history = getHistory().get(p.getUniqueId());
 		
-		if (remove && !list.isEmpty()) {
-			Object obj = list.get(list.size() - 1);
-			list.remove(obj);
+		if (remove && history != null && !history.isEmpty()) {
+			history.removeLast();
 		}
 		
-		if (list.isEmpty()) getHistory().remove(p.getUniqueId());
-		else getHistory().put(p.getUniqueId(), list);
+		if (history != null && history.isEmpty()) {
+			getHistory().remove(p.getUniqueId());
+		}
 		
-		return list.isEmpty() ? null: list.get(list.size() - 1);
+		return history == null || history.isEmpty() ? null: history.getLast();
 	}
 
 	public static void displayItem(Player p, final ItemStack item, boolean addToHistory, final boolean book, final int page) {
@@ -832,7 +832,9 @@ public final class SlimefunGuide {
 		
 		if (addToHistory) addToHistory(p, sfItem != null ? sfItem: item);
 		
-		if (getHistory().containsKey(p.getUniqueId()) && getHistory().get(p.getUniqueId()).size() > 1) {
+		LinkedList<Object> history = getHistory().get(p.getUniqueId());
+		
+		if (history != null && history.size() > 1) {
 			menu.addItem(0, new CustomItem(new ItemStack(Material.ENCHANTED_BOOK), "&7\u21E6 Back", "", "&rLeft Click: &7Go back to previous Page", "&rShift + left Click: &7Go back to Main Menu"));
 			menu.addMenuClickHandler(0, (pl, slot, itemstack, action) -> {
 				if (action.isShiftClicked()) openMainMenu(p, true, book, 1);
@@ -1019,7 +1021,7 @@ public final class SlimefunGuide {
 		menu.open(p);
 	}
 	
-	private static Map<UUID, List<Object>> getHistory() {
+	private static Map<UUID, LinkedList<Object>> getHistory() {
 		return SlimefunPlugin.getUtilities().guideHistory;
 	}
 	
@@ -1031,11 +1033,9 @@ public final class SlimefunGuide {
 		String timeleft = "";
         final int minutes = (int) (seconds / 60L);
         if (minutes > 0) {
-            timeleft = String.valueOf(timeleft) + minutes + "m ";
+            timeleft += minutes + "m ";
         }
         seconds -= minutes * 60;
-        timeleft = String.valueOf(timeleft) + seconds + "s";
-        return "&7" + timeleft;
+        return "&7" + timeleft + seconds + "s";
 	}
-
 }
